# open-rp

./: .gitignore  .gitmodules  AUTHORS  Config.mak  Custom.mak  Gentoo.mak  INSTALL  Linux.mak  MacOSX.mak  Makefile  Makefile.am  Makefile.in  MinGW32.mak  README  README.md  README.zh  Version.mak  autogen.sh  base64.cpp  base64.h  config.cpp  config.h  config.h.in  configure  configure.ac  font.h  images.h  keybind.cpp  keybind.h  launch.h  main.cpp  open-rp.spec  open-rp.spec.in  orp-conf.h  orp.cpp  orp.h  yuv.cpp  yuv.h
gui/: Gentoo.mak  Linux.mak  MacOSX.mak  Makefile  MinGW32.mak  images.h  orpui.cpp  orpui.h  wxorp.cpp
gui/Open Remote Play.app/Contents/: Info.plist
gui/images/: release.xcf
images/: Makefile  Makefile.in  splash.xcf  ter-u16b.bdf
keys/: Makefile  Makefile.am  Makefile.in  keys.c  keys.cpp  keys.orp
packages.d/: 00-zlib  01-libpng  02-freetype  03-curl  04-faad2  05-SDL  06-SDL_image  07-SDL_net  08-SDL_ttf  09-ffmpeg  10-openssl  11-wxWidgets  Makefile  build.sh  libfix.sh
packages.d/patches/: curl-7.19.4-EINTR.patch  wxWidgets-2.9.0-textctrlfix.patch
patches/: README  SDL_net-1.2.7-TCP_NODELAY.patch  curl-7.19.4-blank-header-fix.patch
psp/: Makefile  icon0.xcf  orp.c
psp/ORP_Exporter/: EBOOT.PBP
test/: Makefile  config.cpp
util/: Linux.mak  MacOSX.mak  Makefile  Makefile.am  Makefile.in  MinGW32.mak  config-debug.cpp  export-debug.cpp  mksnap.sh  stream-debug.cpp
wol/: Makefile  orpwol.c
wxorp/: Info.plist.in  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  wxorp.cpp  wxorp.h
wxorp/Open Remote Play.app/Contents/Resources/: icon.icns
wxorp/images/: logo.xcf
